# OrcaSVN

./: .gitignore  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.en.md  README.md  ROADMAP.md  SETUP.md  index.html  package-lock.json  package.json  todo.md  vite.config.mts  vite.config.ts
.github/workflows/: ci.yml  tauri-build.yml
docs/: performance-optimization.md  pr-3-review.md
src/: App.vue  element-plus.d.ts  main.ts  style.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: fix-ico.js  generate-all.js  generate-icons.js  icon.icns
src-tauri/src/: main.rs  svn.rs
src-tauri/src/svn/: executor.rs  operations.rs
src/api/: svn.ts
src/components/: LanguageSwitcher.vue
src/components/icons/: materialIcons.ts
src/composables/: useLocale.ts  useSettings.ts  useSvnStatus.ts  useTheme.ts  useWorkspace.ts
src/i18n/: index.ts
src/i18n/locales/: en-US.ts  ja-JP.ts  ko-KR.ts  zh-CN.ts  zh-TW.ts
src/layouts/: MainLayout.vue
src/router/: index.ts
src/stores/: workspace.ts
src/types/: index.ts
src/utils/: gitignore.ts
src/views/: BlameView.vue  CheckoutView.vue  CommitView.vue  DiffView.vue  LogView.vue  SettingsView.vue  UpdateView.vue  WorkspaceView.vue
