[package]
name = "OrcaSVN"
version = "0.3.1"
description = "OrcaSVN 客户端"
authors = [""]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["rt", "time"] }
thiserror = "2"
quick-xml = "0.37"
tracing = "0.1"
tracing-subscriber = "0.3"
